crates/marain-core/tests/fixtures/errors/08_bare_maior.lat
sit ^x est ^a maior 5.
